--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "IsraelDominguez/genetsis-laravel-admin",
-    "description": "Admin Packaga for Genetsis webs",
+    "description": "Admin Package for Genetsis webs",
     "type": "library",
     "authors": [
         {
