--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     ],
     "require": {
         "php": "^7.0",
+        "spatie/laravel-activitylog": "dev-master",
+        "spatie/laravel-permission": "dev-master",
         "IsraelDominguez/laravel-themes": "dev-master",
         "IsraelDominguez/laravel-logviewer": "dev-master"
     },
