--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "spatie/laravel-activitylog": "dev-master",
         "spatie/laravel-permission": "dev-master",
         "israeldominguez/laravel-themes": "dev-master",
-        "israeldominguez/laravel-logviewer": "dev-master"
+        "israeldominguez/laravel-logviewer": "dev-master",
+        "yajra/laravel-datatables-oracle": "^9.0@dev"
     },
     "require-dev": {
         "illuminate/support": "~5.5.0",
