--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "spatie/laravel-permission": "dev-master",
         "israeldominguez/laravel-themes": "dev-master",
         "israeldominguez/laravel-logviewer": "dev-master",
-        "yajra/laravel-datatables-oracle": "^9.0@dev"
+        "yajra/laravel-datatables-oracle": "^9.0@dev",
+        "israeldominguez/druid-rest-api": "dev-master"
     },
     "require-dev": {
         "illuminate/support": "~5.5.0",
@@ -35,6 +36,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/israeldominguez/laravel-logviewer"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/israeldominguez/druid-rest-api"
         }
     ],
     "extra": {
