--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,8 @@
                 "Genetsis\\Admin\\Providers\\GtmServiceProvider"
             ],
             "aliases": {
-                "AdminMenu": "Genetsis\\Admin\\Facades\\AdminMenuFacade"
+                "AdminMenu": "Genetsis\\Admin\\Facades\\AdminMenuFacade",
+                "GtmEvents": "Genetsis\\Admin\\Facades\\GtmEventsFacade"
             }
         }
     }
